// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeScript project config file should parse and resolve correctly: src 1`] = `
{
  "compileOnSave": false,
  "compilerOptions": {
    "allowJs": true,
    "baseUrl": "./",
    "downlevelIteration": true,
    "jsx": "react",
    "jsxFactory": "m",
    "lib": [
      "es2022",
      "dom",
      "dom.iterable",
    ],
    "module": "es6",
    "moduleResolution": "node10",
    "noEmit": true,
    "noImplicitAny": true,
    "noUnusedLocals": true,
    "resolveJsonModule": true,
    "strictNullChecks": true,
    "target": "es2019",
    "types": [
      "chrome",
      "offscreencanvas",
    ],
  },
  "files": [
    "./defaults.ts",
    "./definitions.d.ts",
    "./api/chrome.ts",
    "./api/fetch.ts",
    "./api/index.ts",
    "./background/config-manager.ts",
    "./background/content-script-manager.ts",
    "./background/devtools.ts",
    "./background/extension.ts",
    "./background/icon-manager.ts",
    "./background/index.ts",
    "./background/make-chromium-happy.ts",
    "./background/make-firefox-happy.ts",
    "./background/messenger.ts",
    "./background/newsmaker.ts",
    "./background/tab-manager.ts",
    "./background/ui-highlights.ts",
    "./background/user-storage.ts",
    "./background/window-theme.ts",
    "./background/utils/extension-api.ts",
    "./background/utils/log.ts",
    "./background/utils/network.ts",
    "./background/utils/sendLog.ts",
    "./background/utils/tab.ts",
    "./generators/css-filter.ts",
    "./generators/dynamic-theme.ts",
    "./generators/modify-colors.ts",
    "./generators/static-theme.ts",
    "./generators/svg-filter.ts",
    "./generators/text-style.ts",
    "./generators/theme-engines.ts",
    "./generators/utils/format.ts",
    "./generators/utils/matrix.ts",
    "./generators/utils/parse.ts",
    "./inject/color-scheme-watcher.ts",
    "./inject/detector.ts",
    "./inject/fallback.ts",
    "./inject/index.ts",
    "./inject/style.ts",
    "./inject/svg-filter.ts",
    "./inject/dynamic-theme/adopted-style-manger.ts",
    "./inject/dynamic-theme/css-collection.ts",
    "./inject/dynamic-theme/css-rules.ts",
    "./inject/dynamic-theme/fixes.ts",
    "./inject/dynamic-theme/image.ts",
    "./inject/dynamic-theme/index.ts",
    "./inject/dynamic-theme/inline-style.ts",
    "./inject/dynamic-theme/meta-theme-color.ts",
    "./inject/dynamic-theme/modify-css.ts",
    "./inject/dynamic-theme/mv3-proxy.ts",
    "./inject/dynamic-theme/network.ts",
    "./inject/dynamic-theme/style-manager.ts",
    "./inject/dynamic-theme/stylesheet-modifier.ts",
    "./inject/dynamic-theme/stylesheet-proxy.ts",
    "./inject/dynamic-theme/variables.ts",
    "./inject/dynamic-theme/watch.ts",
    "./inject/utils/dom.ts",
    "./inject/utils/log.ts",
    "./ui/utils.ts",
    "./ui/connect/connector.ts",
    "./ui/connect/mock.ts",
    "./ui/controls/index.ts",
    "./ui/controls/utils.ts",
    "./ui/controls/button/index.tsx",
    "./ui/controls/checkbox/index.tsx",
    "./ui/controls/color-dropdown/index.tsx",
    "./ui/controls/color-picker/hsb-picker.tsx",
    "./ui/controls/color-picker/index.tsx",
    "./ui/controls/delete-all-button/index.tsx",
    "./ui/controls/dropdown/index.tsx",
    "./ui/controls/icon-button/index.tsx",
    "./ui/controls/message-box/index.tsx",
    "./ui/controls/multi-switch/index.tsx",
    "./ui/controls/nav-button/index.tsx",
    "./ui/controls/overlay/index.ts",
    "./ui/controls/reset-button/index.tsx",
    "./ui/controls/select/index.tsx",
    "./ui/controls/shortcut/index.tsx",
    "./ui/controls/slider/index.tsx",
    "./ui/controls/tab-panel/index.tsx",
    "./ui/controls/tab-panel/tab.tsx",
    "./ui/controls/text-list/index.tsx",
    "./ui/controls/textbox/index.tsx",
    "./ui/controls/time-range-picker/index.tsx",
    "./ui/controls/toggle/index.tsx",
    "./ui/controls/updown/index.tsx",
    "./ui/controls/updown/track.tsx",
    "./ui/controls/virtual-scroll/index.tsx",
    "./ui/devtools/index.tsx",
    "./ui/devtools/components/body.tsx",
    "./ui/popup/compatibility.js",
    "./ui/popup/index.tsx",
    "./ui/popup/types.d.ts",
    "./ui/popup/automation-page/index.tsx",
    "./ui/popup/body/index.tsx",
    "./ui/popup/check-button/index.tsx",
    "./ui/popup/components/body.tsx",
    "./ui/popup/components/custom-settings-toggle/index.tsx",
    "./ui/popup/components/engine-switch/index.tsx",
    "./ui/popup/components/filter-settings/index.tsx",
    "./ui/popup/components/filter-settings/mode-toggle.tsx",
    "./ui/popup/components/font-settings/index.tsx",
    "./ui/popup/components/header/index.tsx",
    "./ui/popup/components/header/more-new-highlight.tsx",
    "./ui/popup/components/header/more-site-settings.tsx",
    "./ui/popup/components/header/more-toggle-settings.tsx",
    "./ui/popup/components/loader/index.tsx",
    "./ui/popup/components/more-settings/index.tsx",
    "./ui/popup/components/news/index.tsx",
    "./ui/popup/components/site-list-settings/index.tsx",
    "./ui/popup/components/site-toggle/checkmark-icon.tsx",
    "./ui/popup/components/site-toggle/index.tsx",
    "./ui/popup/control-group/index.tsx",
    "./ui/popup/main-page/app-switch.tsx",
    "./ui/popup/main-page/help.tsx",
    "./ui/popup/main-page/index.tsx",
    "./ui/popup/main-page/keyboard-icon.tsx",
    "./ui/popup/main-page/settings-icon.tsx",
    "./ui/popup/main-page/site-toggle.tsx",
    "./ui/popup/main-page/sun-moon-icon.tsx",
    "./ui/popup/main-page/system-icon.tsx",
    "./ui/popup/main-page/theme-group.tsx",
    "./ui/popup/main-page/watch-icon.tsx",
    "./ui/popup/manage-settings-page/export-settings.tsx",
    "./ui/popup/manage-settings-page/export-theme.tsx",
    "./ui/popup/manage-settings-page/fetch-news.tsx",
    "./ui/popup/manage-settings-page/import-settings.tsx",
    "./ui/popup/manage-settings-page/index.tsx",
    "./ui/popup/manage-settings-page/reset-settings-button.tsx",
    "./ui/popup/manage-settings-page/sync-config.tsx",
    "./ui/popup/manage-settings-page/sync-settings.tsx",
    "./ui/popup/news-section/index.tsx",
    "./ui/popup/page-viewer/index.tsx",
    "./ui/popup/remove-all-sites-button/remove-site-list-button.tsx",
    "./ui/popup/settings-page/automation-button.tsx",
    "./ui/popup/settings-page/change-browser-theme.tsx",
    "./ui/popup/settings-page/context-menus.tsx",
    "./ui/popup/settings-page/detect-dark-theme.tsx",
    "./ui/popup/settings-page/devtools.tsx",
    "./ui/popup/settings-page/enabled-by-default.tsx",
    "./ui/popup/settings-page/index.tsx",
    "./ui/popup/settings-page/mange-settings-button.tsx",
    "./ui/popup/settings-page/site-list-button.tsx",
    "./ui/popup/settings-page/version.tsx",
    "./ui/popup/site-list-page/index.tsx",
    "./ui/popup/site-list-page/site-list.tsx",
    "./ui/popup/theme/utils.ts",
    "./ui/popup/theme/controls/background-color.tsx",
    "./ui/popup/theme/controls/brightness.tsx",
    "./ui/popup/theme/controls/color-scheme.tsx",
    "./ui/popup/theme/controls/contrast.tsx",
    "./ui/popup/theme/controls/font-picker.tsx",
    "./ui/popup/theme/controls/format.ts",
    "./ui/popup/theme/controls/grayscale.tsx",
    "./ui/popup/theme/controls/immediate-modify.tsx",
    "./ui/popup/theme/controls/index.tsx",
    "./ui/popup/theme/controls/mode.tsx",
    "./ui/popup/theme/controls/reset-button.tsx",
    "./ui/popup/theme/controls/scheme.tsx",
    "./ui/popup/theme/controls/scrollbar.tsx",
    "./ui/popup/theme/controls/selection.tsx",
    "./ui/popup/theme/controls/sepia.tsx",
    "./ui/popup/theme/controls/style-system-controls.tsx",
    "./ui/popup/theme/controls/text-color.tsx",
    "./ui/popup/theme/controls/text-stroke.tsx",
    "./ui/popup/theme/controls/theme-control.tsx",
    "./ui/popup/theme/controls/use-font.tsx",
    "./ui/popup/theme/page/collapsible-panel.tsx",
    "./ui/popup/theme/page/index.tsx",
    "./ui/popup/theme/preset-picker/index.tsx",
    "./ui/popup/utils/issues.ts",
    "./ui/popup/utils/markdown.tsx",
    "./ui/stylesheet-editor/index.tsx",
    "./ui/stylesheet-editor/components/body.tsx",
    "./utils/array.ts",
    "./utils/async-queue.ts",
    "./utils/automation.ts",
    "./utils/color.ts",
    "./utils/colorscheme-parser.ts",
    "./utils/csp.ts",
    "./utils/debounce.ts",
    "./utils/ipv6.ts",
    "./utils/links.ts",
    "./utils/locales.ts",
    "./utils/math-eval.ts",
    "./utils/math.ts",
    "./utils/media-query.ts",
    "./utils/message.ts",
    "./utils/network.ts",
    "./utils/parsing.ts",
    "./utils/platform.ts",
    "./utils/promise-barrier.ts",
    "./utils/state-manager-impl.ts",
    "./utils/state-manager.ts",
    "./utils/tabs.ts",
    "./utils/text.ts",
    "./utils/throttle.ts",
    "./utils/time.ts",
    "./utils/uid.ts",
    "./utils/url.ts",
    "./utils/validation.ts",
    "./utils/visibility.ts",
  ],
}
`;

exports[`TypeScript project config file should parse and resolve correctly: src/api 1`] = `
{
  "compileOnSave": false,
  "compilerOptions": {
    "allowJs": true,
    "baseUrl": "..",
    "downlevelIteration": true,
    "jsx": "react",
    "jsxFactory": "m",
    "lib": [
      "es2022",
      "dom",
      "dom.iterable",
    ],
    "module": "es6",
    "moduleResolution": "node10",
    "noEmit": true,
    "noImplicitAny": true,
    "noUnusedLocals": true,
    "resolveJsonModule": true,
    "strictNullChecks": true,
    "target": "es5",
    "types": [
      "chrome",
      "offscreencanvas",
    ],
  },
  "files": [
    "./chrome.ts",
    "./fetch.ts",
    "./index.ts",
  ],
}
`;

exports[`TypeScript project config file should parse and resolve correctly: tests/inject 1`] = `
{
  "compileOnSave": false,
  "compilerOptions": {
    "allowJs": true,
    "downlevelIteration": true,
    "esModuleInterop": true,
    "inlineSources": true,
    "jsx": "react",
    "jsxFactory": "m",
    "lib": [
      "es2022",
      "dom",
      "dom.iterable",
    ],
    "module": "es6",
    "moduleResolution": "node10",
    "noEmit": true,
    "noEmitOnError": true,
    "noImplicitAny": true,
    "removeComments": false,
    "sourceMap": true,
    "target": "es2019",
    "types": [
      "chrome",
      "offscreencanvas",
      "jasmine",
    ],
  },
  "exclude": [
    "./coverage",
  ],
  "files": [
    "./karma.conf.cjs",
    "./karma.conf.js",
    "./dynamic/color.tests.ts",
    "./dynamic/fixes.tests.ts",
    "./dynamic/image-analysis.tests.ts",
    "./dynamic/inline-override.tests.ts",
    "./dynamic/link-override.tests.ts",
    "./dynamic/media-query.tests.ts",
    "./dynamic/shadow-dom.tests.ts",
    "./dynamic/style-override.tests.ts",
    "./dynamic/variables.tests.ts",
    "./support/background-stub.ts",
    "./support/customize.ts",
    "./support/echo-client.ts",
    "./support/echo-server.js",
    "./support/polyfills.ts",
    "./support/test-utils.ts",
    "./utils/url.tests.ts",
  ],
}
`;

exports[`TypeScript project config file should parse and resolve correctly: tests/unit 1`] = `
{
  "compileOnSave": false,
  "compilerOptions": {
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "inlineSourceMap": true,
    "lib": [
      "esnext",
      "dom",
    ],
    "module": "commonjs",
    "noImplicitAny": true,
    "skipLibCheck": true,
    "strictNullChecks": true,
    "target": "esnext",
    "types": [
      "chrome",
      "node",
      "jest",
      "jest-extended",
    ],
  },
  "files": [
    "./config/config.tests.ts",
    "./config/locales.tests.ts",
    "./csp/csp.tests.ts",
    "./generators/utils/parse.tests.ts",
    "./inject/fixes.tests.ts",
    "./utils/color.tests.ts",
    "./utils/math.tests.ts",
    "./utils/parsing.tests.ts",
    "./utils/promise-barrier.tests.ts",
    "./utils/state-manager.tests.ts",
    "./utils/text.tests.ts",
    "./utils/time.tests.ts",
    "./utils/uid.tests.ts",
    "./utils/url.tests.ts",
    "./utils/validation.tests.ts",
  ],
}
`;
